test/compile_errors/err_implicit_ok_empty_tail_no_default.w
//! expect-check-fail: return type does not implement Default

type NoDefault {
    value: i32,
}

fn bad -> Result[NoDefault, str]:
    let x = 1
